# genai-graph

./: .gitignore  ARCHITECTURE_GRAPH_SCHEMA.md  Makefile  README.md  TEST_PLAN.md  package-lock.json  pattern_validator.py  pyproject.toml
.github/prompts/: plan-prefectKgOrchestration.prompt.md
.poolside/: settings.local.yaml
config/: app_conf.yaml  baseline.yaml  cypher_examples.yaml  ekg.yaml  genai-graph.code-workspace  mcp_servers.yaml  overrides.yaml
config/agents/: langchain.yaml
config/providers/: embeddings.yaml  llm.yaml
deploy/: Dockerfile
docs/: kg_explorer.md
genai_graph/core/: commands_ekg.py  commands_etl.py  ekg_agent.py  ekg_extend.py  extra_fields_utils.py  graph_backend.py  graph_core.py  graph_documents.py  graph_html.py  graph_html_3d.py  graph_merge.py  graph_registry.py  graph_schema.py  kg_context.py  kg_manager.py  kg_outcome_manager.py  kuzu_graph_html.py  schema_doc_generator.py  subgraph.py  subgraph_factories.py  table_to_node_mapper.py  text2cypher.py
genai_graph/ekg/: IDEAS.md  architecture_subgraph.py  rainbow_subgraph.py  schema_doc_generator.py  subgraph.py
genai_graph/ekg/baml_src/: architecture_doc.baml  clients.baml  common_entities.baml  rainbow_review.baml  rfq_analyser.baml  text2cypher.baml
genai_graph/ekg/cli_commands/: commands.py  commands_ekg.py
genai_graph/ekg/schema/: architecture_doc.py  common_nodes.py  crm_export.py  extend_nodes.py  rainbow_review.py
genai_graph/etl/: cocoindex_start.py  text_embedding_flow.py
genai_graph/main/: langserve_app.py  modal_app.py  streamlit.py
genai_graph/orchestration/: __init__.py  deployments.py  flows.py  tasks.py
genai_graph/webapp/: cli_commands.py
genai_graph/webapp/pages/demos/: kg_explorer.py  reAct_agent.py
genai_graph/webapp/pages/settings/: configuration.py  welcome.py
genai_graph/webapp/ui_components/: cypher_graph_display.py  smolagents_streamlit.py
notebooks/: 0_scratchpad.ipynb  cypher_examples.ipynb  cypher_query_development.ipynb
scratchpad/cocoindex/: cocoindex_start.py  commands_ekg.py  commands_etl.py  text_embedding_flow.py
scratchpad/prefect/: test.py
tests/: conftest.py
tests/integration_tests/: test_graph.py  test_kg_create_flow.py  test_schema_creation.py
tests/unit_tests/core/: __init__.py  test_embedded_structs.py  test_kuzu_type_mapping.py
