[project]
name = "genai_graph"
version = "0.1.2"
description = "GenAI Grapj - Hybrid GraphRag framework built on genai_tk"
authors = [{ name = "Thierry Caminel", email = "thierry.caminel@atos.net" }]
requires-python = ">=3.12,<3.13"
dependencies = [
    # GenAI Toolkit - core AI components
    "genai_tk @ git+https://github.com/tclatos/genai-tk@main",
    # Application framework dependencies
    "pydantic>=2.7.0,<3", # Data validation framework
    "devtools>=0.12.2", # Development utilities
    "loguru>=0.7.3", # Logging library
    "typer>=0.13.0", # CLI framework
    "omegaconf>=2.3.0", # Configuration management
    "fastapi[standard]>=0.115.6", # Web framework
    "rich[jupyter]>=13.9.4", # Terminal formatting
    "universal-pathlib>=0.2.6", # Cross-platform paths
    "pip>=25.1.1", # Package installer
    # "modal>=1.0.5", # Serverless cloud platform
    "python-dotenv>=1.1.1", # Environment variables
    "beartype>=0.21.0", # Run time type checking
    "baml-py>=0.209.0",
    "langchain-classic>=1.0.0",
    "psycopg2-binary>=2.9.11",
    # "gpt-researcher>=0.13.3",
    "baml-cli>=0.1.0",
    "pandas>=2.3.3",
    "langchain-litellm>=0.3.2",
    "case-converter>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/tclatos/genai-graph"
Repository = "https://github.com/tclatos/genai-graph"


[dependency-groups]
# UI and web application dependencies

extra = [
    # Additional AI capabilities 

    "tavily-python>=0.7.12",    # LLM optimized search engine
    "langchain-tavily>=0.2.11",
    "ddgs>=9.7.0",              # DuckDuckGo search API
    "openpyxl>=3.1.5",          # Excel file handling
    "fuzzysearch>=0.8.0",       # Fuzzy string matching
    # "markpickle>=1.6.1",        # Markdown serialization
]

ui = [
    "uvicorn>=0.34.0",         # ASGI server
    "sse-starlette>=2.1.0",    # Server-sent events
    "streamlit[pdf]>=1.49",    # Web app framework
    "streamlit-monaco>=0.1.3", # Code editor component
]
demos = [
    "presidio-analyzer>=2.2.0",   # PII detection
    "presidio-anonymizer>=2.2.0", # PII anonymization
    "Faker>=25.0.0",              # Fake data generation
    "yfinance>=0.2.38",           # Yahoo Finance API
    "matplotlib>=3.9.0,<4",       # Plotting library
    "sqlalchemy>=2.0.29",         # SQL toolkit
    "pypdf>=5.1.0,<6",            # PDF processing
    "scikit-learn>=1.6.1",        # ML algorithms
]

dev = [
    "ruff>=0.9.1",       # Python linter
    "pytest>=8.1.1",     # Testing framework
    "ipykernel>=6.29.4", # Jupyter kernel
    "ipywidgets>=8.1.2", # Jupyter widgets
    "grandalf>=0.8",     # Graph layout algorithms
]

[tool.uv]
package = true
default-groups = ["ui", "demos", "extra", "dev"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["genai_bp"]
package-dir = { "genai_bp" = "genai_graph" }

[tool.ruff]
builtins = ["ic", "debug"]
line-length = 120          # default is 88

[tool.ruff.lint]
# Lint rule configuration:
select = [
    "E", # Pycodestyle errors (PEP 8 style violations)
    "F", # Pyflakes errors (basic syntax and logic errors)
    "I", # isort rules (import sorting)
    "W", # Pycodestyle warnings (style issues that aren't errors)
    "B", # Bugbear - catches common bugs and anti-patterns                                                                                      
    # "N", # Naming conventions                                                                                                                                  
    "C",     # Better comprehensions    
    "ASYNC", # Async 
    "ANN",   # Annotations
    "PIE",
    "PD",    # Pandas
    "FURB",  #refurbishing and modernizing
]

ignore = [ # Ignored linter rules: 
    "E501",   #Line too long (we use 120 chars instead of default 88) 
    "W291",   # Trailing whitespace 
    "W293",   # white spaces "
    "B006",   # Do not use mutable data structures for argument defaults
    "C901",   # Function is too complex , 
    "ANN401", # Annotated with Any
    "ANN002", # Annotate *args
    "ANN003", # Annotate **kwarg
    "ANN201", # Missing return type
    "ANN202", # Missing return info
]

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "Linux"
reportTypedDictNotRequiredAccess = false # Avoid warnings in LangGraph

[tool.pytest.ini_options]
testpaths = ["unit_tests", "integration_tests"]
python_files = ["test_*.py", "*_test.py"]


[project.scripts]
cli = "genai_tk.main.cli:main"
